         1         2         3         4         5         6         7         8
----+----|----+----|----+----|----+----|----+----|----+----|----+----|----+----|



ChangeLog (IOMETER2 - 200X.XX.XX):
==================================

- New features:
   - Added a simple INSTALL file about how to install iometer and dynamo on 
     various platforms.

- Bug fixes:
   - Patch by Ming Zhang to get CPU count from /proc/cpuinfo under Linux. Old
     glibc way is buggy for 64bit Linux and XEN.

- Cleanup:
   -

ChangeLog (IOMETER2 - 2006.07.27):
==================================

- Applied patches:
   - Patch by Ming Zhang to allow dynamo connect to iometer when iometer started
     with a specified non-default port.
   - Patch by Ming Zhang to fix recv() return value processing error in Peek();
   - Patch by Ming Zhang to allocate memory under Linux as 4KB aligned.
   - Patch by Keith Moyer to add a ramp/run time remaining notification to the 
     status bar during appropriate periods.
   - Patch by Ming Zhang to support optional display BigMeter when iometer starts.
   - Patch by Ming Zhang to allow iometer and dynamo use specified port.
   - Patch by Ming Zhang to fix 2 memory leaks in ICFOpenDialog and ICFSaveDialog
     class.
   - Patch by Ming Zhang to exclude the disk if can not detect the disk size
     information under Linux.
   - Patch by Fabian Tillier to fix DDK path.
   - Patch by Christensen ReedX K to update iomtr_kstat module with newer
     2.6.x kernel.
   - Patch by Christensen ReedX K to use O_DIRECT as default for Linux.
   - Patch by Ming Zhang to use sysconf for processor count.
   - Patch by Ming Zhang to use unify method for version string.
   - Patch by Saner Pool to filter invalid commas, new line, and cariage
     return in .csv output.
   - By Ganderson, initialize iocq structure member for all platform.
   - By Rick Altherr, fixed the Mac OSX compile.
   - By Ming Zhang, fixed the Windows compile broken by MacOS port.